--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Portfolio Mathias N Fernandez</title>
 </head>
 
-<body style="margin: 0">
+<body style="margin: 0px">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
